<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.eccentric_nz.gamemodeinventories</groupId>
    <artifactId>GameModeInventories</artifactId>
    <version>3.6.1</version>
    <name>GameModeInventories</name>
    <!-- use a profile here so that the Jenkins build can fetch the
    CoreProtect dependency locally - there is no repo available! -->
    <profiles>
        <profile>
            <id>jenkins</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <id>Spigot</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <finalName>GameModeInventories</finalName>
        <plugins>
            <!-- Make a Jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <!-- HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>22.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.diddiz</groupId>
            <artifactId>LogBlock</artifactId>
            <version>1.21.8.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>system</scope>
            <systemPath>${basedir}/lib/LogBlock.jar</systemPath>
        </dependency>
    </dependencies>
</project>
